kubernetes/apps/rook-ceph/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: rook-ceph
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
        # Allow ingress from pods in networking namespace that are part of ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
        # Allow ingress from pods in monitoring namespace
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
  policyTypes:
    - Ingress
